--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@ body
    <![endif]-->
 
    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-   <script type="text/javascript">
+   <!-- <script type="text/javascript">
    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
@@ -1096,7 +1096,7 @@ body
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X', '_trackPageview');
       ga('send','pageview');
-      </script>
+      </script> -->
 
 
 
