--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@ body
                         </li><!-- /Portfolio -->
 
                         <!-- Team -->
-                        <li>
+                        <!-- <li>
                            <a href="#team-section" title="Team" class="scrollto">
                               Team
                            </a>
-                        </li><!-- /Team -->
+                        </li> -->
+                        <!-- /Team -->
 
                         <!-- Contact Us -->
                         <li>
